--- a/css/site.styl
+++ b/css/site.styl
@@ -153,7 +153,8 @@ section#browse
             color #8891A2
             position relative
             width 20%
-            min-height 400px
+            height 380px
+            overflow hidden
             list-style-type none
             box-shadow 5px
             float left
